Module09_K8s_AKS/Demo/azure-web-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: azure-files-pvc-nginx
          mountPath: /usr/share/nginx/html
      volumes:
      - name: azure-files-pvc-nginx
        persistentVolumeClaim:
          claimName: azure-files-pvc-nginx
