Module09_K8s_AKS/Demo/azure-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
